[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reponews"
dynamic = ["version"]
description = "Send e-mails about new events on your GitHub repositories"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Thorvald Wodder II", email = "reponews@varonathe.org" }
]

keywords = [
    "GitHub",
    "GitHub activity",
    "GitHub issues",
    "e-mail",
    "notifications",
    "pull requests",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Bug Tracking",
    "Typing :: Typed",
]

dependencies = [
    "click         >= 8.0",
    "click-loglevel ~= 0.5",
    "eletter       ~= 0.2",
    "ghrepo        ~= 0.1",
    "ghtoken       ~= 0.1",
    "mailbits      ~= 0.2",
    "outgoing      ~= 0.6",
    "platformdirs  >= 3.0, < 5.0",
    "pydantic      ~= 2.0",
    "python-dotenv >= 0.11, < 2.0",
    "requests      ~= 2.20",
    "tomli         >= 1.2, < 3.0; python_version < '3.11'",
    "typing_extensions; python_version < '3.9'",
]

[project.scripts]
reponews = "reponews.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/reponews"
"Bug Tracker" = "https://github.com/jwodder/reponews/issues"

[tool.hatch.version]
path = "src/reponews/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
