[metadata]
name = reponews
version = attr:reponews.__version__
description = Send e-mails about new events on your GitHub repositories
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = reponews@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/reponews

keywords =
    GitHub
    GitHub activity
    GitHub issues
    e-mail
    notifications
    pull requests

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Information Technology
    Topic :: Communications :: Email
    Topic :: Software Development :: Bug Tracking
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/reponews
    Bug Tracker = https://github.com/jwodder/reponews/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.7
install_requires =
    backports.cached-property; python_version < "3.8"
    click         >= 8.0
    eletter       ~= 0.2
    ghrepo        ~= 0.1
    mailbits      ~= 0.2
    outgoing      ~= 0.3
    platformdirs  ~= 2.1
    pydantic      ~= 1.7
    python-dotenv ~= 0.11
    requests      ~= 2.20
    tomli         ~= 1.2
    typing_extensions; python_version < "3.8"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    reponews = reponews.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
